--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "aura-client",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "The front-end portion of the aura web application",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/project-aura/client/issues"
   },
-  "homepage": "https://github.com/project-aura/client#readme"
+  "homepage": "https://github.com/project-aura/client#readme",
+  "dependencies": {
+    "gh-pages": "^2.0.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-scripts": "^2.1.5"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
