--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
+  "homepage": "https://project-aura.github.io/client",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "browserslist": [
