--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
-  "homepage": "https://project-aura.github.io/client",
+  "homepage": "https://aura.community",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
