--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
-    "leaflet": "^1.4.0",
+    "google-maps-react": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.4",
-    "react-leaflet": "^2.2.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
