--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
     "google-maps-react": "^2.0.2",
+    "jsonwebtoken": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.4",
