--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -71,6 +71,7 @@
     "no-underscore-dangle": 0,
     "consistent-return": 0,
     "react/display-name": 1,
+    "react/destructuring-assignment": ["never"],
     "react/no-array-index-key": 0,
     "react/react-in-jsx-scope": 0,
     "react/prefer-stateless-function": 0,
