--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,12 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[context.production.environment]
+  REACT_APP_AURA_SERVER_API = "https://aurelia-server.herokuapp.com/api/"
+
+[context.branch-deploy.environment]
+  REACT_APP_AURA_SERVER_API = "https://aurelia-server-staging.herokuapp.com/api/"
+
+[context.deploy-preview.environment]
+  REACT_APP_AURA_SERVER_API = "https://aurelia-server-staging.herokuapp.com/api/"
