--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "gh-pages": "^2.0.1",
     "google-maps-react": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.12.0",
@@ -12,6 +11,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.4",
     "react-glide": "^3.2.0",
+    "react-helmet": "^5.2.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
