--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.4",
+    "react-ga": "^2.5.7",
     "react-glide": "^3.2.0",
     "react-helmet": "^5.2.1",
     "react-loader-spinner": "^2.3.0",
@@ -23,8 +24,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "browserslist": [
