--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-vis": "^1.11.7",
     "shortid": "^2.2.14",
     "sweetalert2": "^8.8.5"
   },
