--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,11 @@
 
 [context.deploy-preview.environment]
   REACT_APP_AURA_SERVER_API = "https://aurelia-server-staging.herokuapp.com/api/"
+
+[context.development.environment]
+  REACT_APP_AURA_SERVER_API = "https://aurelia-server-development.herokuapp.com/api/"
+
+[context.staging.environment]
+  REACT_APP_AURA_SERVER_API = "https://aurelia-server-staging.herokuapp.com/api/"
+
+
